Fixed bugs added things. Check desc.
Added credits, updated todo, added shell and luaIDE, added shell.icon.
Fixed bugs

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,14 +1,9 @@
 Todo
--fix EVERYTHING
--branch most things into separate programs
--finish usercontrol program(Biggest change in code I think)
--finish login program ~Add username check before asking for password
--Come up with a way to make a "return" button which returns to the previous program
--Come up with a way to differentiate between the two sessions (admin or regular user)
--Settings and locale?
--file browsing and/or program browsing with the ability to remove programs from that list for security
--Look at updater
--change version
--fix syntax/code etc.
--Make a GUI version?
--Much more
+-Create Settings
+-Fix updater
+-Fix setup
+-Fix regular user homepage
+-Get rid of DOS api
+-Find fix for LuaIDE
+-Credits for all program developers
+-Live username checking in login page
